<resources>
    <string name="app_name">ExamenUF1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preu">Preu</string>
    <string name="nom">Nom</string>
    <string name="nota">Nota</string>
    <string name="insert">Insert</string>
    <string name="grup">Grup</string>
    <string name="grupo">Grupo</string>
    <string name="nombre">Nombre</string>
    <string name="notaCV">Nota</string>
</resources>